--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,7 @@ hr{
     margin-top: 10px;
     }
     .strng{
-        font-size: 22px
+        font-size: 20px;
     }
     .mainhero{
         text-align: center;
