--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,7 +86,8 @@ hr{
         font-size: 14px;
     }
     .out{
-        font-size: 15px;
-        height: 30px;
+        font-size: 10px;
+        height: 30px;    
     }
+}
 }
